src/objects/Questionnaire_Question__c.object
<CustomObject>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Active questions can be selected for questionaire</errorMessage>
            <filterItems>
                <field>Questions__c.Dependent_Question__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Questions__c</referenceTo>
        <relationshipLabel>Questionnaire Questions</relationshipLabel>
        <relationshipName>QFOR_Questionnaire_Questions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <label>Questionnaire</label>
        <referenceTo>Questionaire__c</referenceTo>
        <relationshipName>QFOR_Questionnaire_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Sequence_text__c</fullName>
        <label>Unique Sequence text</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Questionnaire Question</label>
    <nameField>
        <displayFormat>QQ-{000}</displayFormat>
        <label>Questionnaire Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>